upgrade project dependencies